# Matey_Portfolio

./: README.md
Machine Learning Group project/deployed group project (streamlit)/: README.md  pyproject.toml
Machine Learning Group project/deployed group project (streamlit)/.github/workflows/: starter.yaml
Machine Learning Group project/deployed group project (streamlit)/Notebooks/: BOA.ipynb  DownloadAndCleanData.ipynb  model.ipynb  model2Classes.ipynb
Machine Learning Group project/deployed group project (streamlit)/Other/: Improvement in Data Management Strategies.docx  Product lifecycle.docx
Machine Learning Group project/deployed group project (streamlit)/data/: Breda_2020.csv  Opleidingsniveau 15-75-jarigen - - Buurten van Gemeente Breda.csv  X.csv  number_of_students_BO.csv  regions.geojson  y.csv
Machine Learning Group project/deployed group project (streamlit)/data/leefbaarometer 3.0 dimensions/: Score dimensie fysieke omgeving (afwijking landelijk gemiddelde) - Buurten .csv  Score dimensie sociale samenhang (afwijking landelijk gemiddelde) - Buurten.csv  Score dimensie voorzieningen (afwijking landelijk gemiddelde) - Buurten van.csv
Machine Learning Group project/deployed group project (streamlit)/data/processed/: QOL_of_Gemeente_Breda_processed.csv  educational_level_neighbourhood_of_Gemeente_Breda_processed.csv  population_data.csv
Machine Learning Group project/deployed group project (streamlit)/pages/: model_class.sav  🧑‍⚖️DEDA framework.py
Machine Learning Group project/deployed group project (streamlit)/tests/: test_functions.py
(+90 files in other folders)
