[tool.poetry]
name = "thecrimecrystalball"
version = "0.1.0"
description = ""
authors = ["MaikelBoezer220755 <112754865+MaikelBoezer220755@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
geopandas = "^0.13.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
tqdm = "^4.65.0"
scikit-learn = "^1.2.2"
xgboost = "^1.7.5"
lightgbm = "^3.3.5"
catboost = "^1.2"
folium = "^0.14.0"
mapclassify = "^2.5.0"
optuna = "^3.2.0"
pathlib = "^1.0.1"
streamlit = "^1.23.1"
sphinx = "^7.0.1"
streamlit-extras = "^0.2.7"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
